--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -7,10 +7,9 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  
   <main>
     {{ content | safe }}
   </main>
-
+  <script defer src="/js/app.js"></script>
 </body>
 </html>
