--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Balatro Gold Sticker Tracker</title>
   <link rel="stylesheet" href="/css/style.css">
+  <script>
+  (function () {
+    try {
+      var p = new URL(location.href).searchParams.get('order');
+      if (p && p !== 'game') document.documentElement.classList.add('preorder-hide');
+    } catch (_) {}
+  })();
+  </script>
 </head>
 <body>
   <main>
