Add sound on checked jokers

--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -19,6 +19,9 @@
   <main>
     {{ content | safe }}
   </main>
+  <footer>
+    &copy; 2025 <a href="https://mikeaparicio.com">Mike Aparicio</a>
+  </footer>
   <script defer src="/js/app.js"></script>
 </body>
 </html>
