--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -279,6 +279,12 @@ label:focus .joker-img {
   padding: calc(.5rem - 2px) calc(.75rem - 2px);
   background-color: transparent;
   border-color: transparent;
+  color: rgb(0 0 0 / .4);
+}
+
+#joker-filter button:hover,
+#joker-filter button:focus-visible {
+  color: rgb(0 0 0 / 1);
 }
 
 div:has(.hide-checked-control) {
@@ -291,6 +297,16 @@ div:has(.hide-checked-control) {
   gap: .5rem;
   cursor: pointer;
   font-size: .75rem;
+}
+
+footer {
+  color: white;
+  font-size: .75rem;
+  text-align: center;
+  padding: 2rem;
+  a {
+    color: inherit;
+  }
 }
 
 .counter[hidden] { display: block; visibility: hidden; }
