--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -16,6 +16,11 @@
   </script>
 </head>
 <body>
+  <div style="width: 0; height: 0; position: absolute; overflow: hidden;"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <symbol viewBox="0 0 24 24" id="sound-on"><path d="M12 4.7v14.6l-.04.34-.1.32-.15.3-.21.24-.25.21-.29.16-.32.1-.35.03-.33-.03-.32-.1-.3-.15-.25-.22-3.38-3.38a.4.4 0 0 0-.3-.12H3c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h2.42c.1 0 .2-.04.28-.12L9.1 3.5l.26-.22.3-.15.31-.1.33-.03.35.03.32.1.29.16.25.2.2.26.16.29.1.32.04.34ZM3 9v6h2.41c.64 0 1.26.25 1.71.7L10 18.6V5.4L7.12 8.3a2.4 2.4 0 0 1-1.7.71H3Zm12.2.6a1 1 0 0 1 1.6-1.2 6.02 6.02 0 0 1 0 7.2 1 1 0 0 1-1.6-1.2 4 4 0 0 0 0-4.8Zm4.87 9.47a1 1 0 0 1-1.41-1.41 8 8 0 0 0 0-11.32 1 1 0 0 1 1.41-1.41 10 10 0 0 1 0 14.14Z"/></symbol>
+    <symbol viewBox="0 0 24 24" id="sound-off"><path d="m17.59 12-2.3-2.3a1 1 0 0 1 1.42-1.4L19 10.58l2.3-2.3a1 1 0 0 1 1.4 1.42L20.42 12l2.3 2.3a1 1 0 0 1-1.42 1.4L19 13.42l-2.3 2.3a1 1 0 0 1-1.4-1.42L17.58 12ZM12 4.7v14.6l-.04.34-.1.32-.15.3-.21.24-.25.21-.29.16-.32.1-.35.03-.33-.03-.32-.1-.3-.15-.25-.22-3.38-3.38a.4.4 0 0 0-.3-.12H3c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h2.42c.1 0 .2-.04.28-.12L9.1 3.5l.26-.22.3-.15.31-.1.33-.03.35.03.32.1.29.16.25.2.2.26.16.29.1.32.04.34ZM3 9v6h2.41c.64 0 1.26.25 1.71.7L10 18.6V5.4L7.12 8.3a2.4 2.4 0 0 1-1.7.71H3Z"/></symbol>
+    <symbol viewBox="0 0 24 24" id="info"><path d="M12 1a11 11 0 1 1-.01 22.01A11 11 0 0 1 12 1Zm0 2a9 9 0 1 0 0 18 9 9 0 0 0 0-18Zm-1.97 6.33a1 1 0 0 1-1.88-.66A4 4 0 0 1 15.92 10c0 1.1-.62 2.02-1.42 2.69a7.97 7.97 0 0 1-2.26 1.26 1 1 0 0 1-.64-1.9s.9-.3 1.62-.9c.36-.3.7-.66.7-1.15a2 2 0 0 0-3.89-.66ZM12.01 16a1 1 0 1 1 0 2 1 1 0 0 1 0-2Z"/></symbol>
+  </svg></div>
   <main>
     {{ content | safe }}
   </main>
@@ -23,5 +28,11 @@
     &copy; 2025 <a href="https://mikeaparicio.com">Mike Aparicio</a>
   </footer>
   <script defer src="/js/app.js"></script>
+  <script>
+    function showDialog(id) {
+      let dialog = document.getElementById(id);
+      dialog.showModal();
+    }
+  </script>
 </body>
 </html>
